--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
-    "devDependencies": {
-        "cypress": "^4.12.0"
-    }
+  "devDependencies": {
+    "cypress": "^4.12.0",
+    "cypress-cucumber-preprocessor": "^2.5.4"
+  },
+  "name": "challenges",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {},
+  "scripts": {
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
